--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js"></script>
 
-    <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+    <title>AI MUSIC WEB APP</title>
 </head>
 <body>
     <div class="btn btn-warning header">
@@ -22,7 +23,7 @@
         <br>
     </div>
     <br>
-    <h3 class="btn btn-primary" id="songs">songs</h3>
+    <h3 class="btn btn-primary" id="songs">song:</h3>
     <script src="main.js"></script>
 </body>
 </html>
