--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
     <br>
     <h3 class="btn btn-primary" id="songs">song:</h3>
+    <button class="btn btn-danger" onclick = "stopSong()"></button>
     <script src="main.js"></script>
 </body>
 </html>
